--- a/skins/eruditex/assets/erudite.css
+++ b/skins/eruditex/assets/erudite.css
@@ -687,7 +687,7 @@ div#firstHeading {}
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1031;
+    z-index:1031;
     -webkit-transform: translateZ(0);
 	margin:0;
 	box-shadow: 0 0 5px rgba(0,0,0,.2);
@@ -928,20 +928,20 @@ ol, ul {
 
 .menu-align {display:none;}
 .main-navigation {margin-top: 10px}
-.site-misc-tools:hover + .menu-align, .menu-align:hover {display:block;width:250px;min-height:100%;position:fixed;top:0;right:0;z-index: 1111;background-color:white; overflow: auto;	box-shadow: 0 0 5px rgba(0,0,0,.2);}
+.site-misc-tools:hover + .menu-align, .site-misc-tools:focus + .menu-align, .menu-align:hover, .menu-align:focus {display:block;width:250px;min-height:100%;position:fixed;top:0;right:0;background-color:white; overflow: auto;box-shadow: 0 0 5px rgba(0,0,0,.2);z-index:1111;}
 .menu-section:hover {height:100%;}
 .main-navigation li {display: block;}
 .main-navigation ul ul, .languages-list {margin-left: 0;}
-#toc {display:none;margin-top:-0.55em;}
+#toc {display:none;margin-top:-0.55em;z-index;1100;}
 #content {left:0; width: 100%;}
-.toc-button {display: block; position: fixed; left:50%; top:0;z-index:1100;margin-left:-0.5em;padding-top:15px;padding-bottom:5em;}
+.toc-button {display: block; position: fixed; left:65px; top:0;margin-left:-0.5em;padding-top:15px;padding-bottom:1em;z-index:1100;}
 .md-toc:before {content:'\f325';}
 #bodyContent {padding: 1.5em;}
 #main {margin: 0.5em;}
 h1 {margin-top:0.5em;}
 #p-documentation.portlet {margin: 0.5em;}
 .header-wrapper { margin-bottom: 0.5em; }
-.toc-button:hover + #toc, #toc:hover {display: block;z-index: 1100;background-color:white;overflow: auto; width: 100%;}
+.toc-button:hover + #toc, .toc-button:focus + #toc, #toc:hover, #toc:focus {display: block;background-color:white;overflow: auto; width: 100%; z-index:1112;}
 }
 
 [class^=md-], [class*=" md-"] {
