--- a/skins/eruditex/assets/erudite.css
+++ b/skins/eruditex/assets/erudite.css
@@ -678,7 +678,7 @@ div.productManual {display: inline;}
 #toc a:first-child {border: none;}
 #tocpad {margin-left: 1em;}
 div#firstHeading {}
-
+label {font-family: Arial, Helvetica, sans-serif; font-size: 0.75em;}
 
 /*menu css*/
 .df-ajax-search, .toc-button {display:none;}
